// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Progress > :props > :color > :color is Array, equal to ["#f00", "#0ff", "#f0f"] 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%; background: linear-gradient( 90deg,#f00,#0ff,#f0f );"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :color > :color is Object, equal to { "0%": "#f00", "100%": "#0ff" } 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%; background: linear-gradient(to right, #f00 0%,#0ff 100%);"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :color > :color is String, equal to "#aaa" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%; background: rgb(170, 170, 170);"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :label > :label is String, equal to "custom label test" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      custom label test
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :label > :label is TNode, equal to () => "tnode" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      tnode
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :label > :label is boolean, equal to false 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    />
  </div>
</div>
`;

exports[`Progress > :props > :label > :label is boolean, equal to true 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :percentage > :percentage is between 0 to 100, equal to 50 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 50%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      50%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :percentage > :percentage is great equal than 100, equal to 200 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--success"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 200%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      200%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :percentage > :percentage is less than 0, equal to -10 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: -10%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      -10%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :size > :size is Number, equal to 50 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :size > :size is String, equal to "large" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :size > :size is String, equal to "medium" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :size > :size is String, equal to "small" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is active 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--active"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is active and percentage is 100 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--active"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 100%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      100%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is error 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--error"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      <svg
        class="t-icon t-icon-close-circle-filled t-progress__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM8.81753 7.40346L11.9999 10.5858L15.1815 7.40414L16.5957 8.81835L13.4141 12L16.5957 15.1816L15.1815 16.5958L11.9999 13.4142L8.81753 16.5965L7.40332 15.1823L10.5856 12L7.40332 8.81767L8.81753 7.40346Z"
          fill="transparent"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is error and percentage is 100 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--error"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 100%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      <svg
        class="t-icon t-icon-close-circle-filled t-progress__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM8.81753 7.40346L11.9999 10.5858L15.1815 7.40414L16.5957 8.81835L13.4141 12L16.5957 15.1816L15.1815 16.5958L11.9999 13.4142L8.81753 16.5965L7.40332 15.1823L10.5856 12L7.40332 8.81767L8.81753 7.40346Z"
          fill="transparent"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is success 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--success"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-progress__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="transparent"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is success and percentage is 100 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--success"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 100%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      <svg
        class="t-icon t-icon-check-circle-filled t-progress__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 23C18.0751 23 23 18.0751 23 12C23 5.92487 18.0751 1 12 1C5.92487 1 1 5.92487 1 12C1 18.0751 5.92487 23 12 23ZM7.49985 10.5858L10.4999 13.5858L16.4999 7.58578L17.9141 8.99999L10.4999 16.4142L6.08564 12L7.49985 10.5858Z"
          fill="transparent"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is warning 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--warning"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      <svg
        class="t-icon t-icon-error-circle-filled t-progress__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
          fill="transparent"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :status > :status is warning and percentage is 100 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--warning"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 100%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      <svg
        class="t-icon t-icon-error-circle-filled t-progress__icon"
        fill="none"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM11.0001 14H13.0001V6.49998H11.0001V14ZM13.004 15.5H11.0001V17.5039H13.004V15.5Z"
          fill="transparent"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :strokeWidth > :strokeWidth is Number, equal to 50 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="height: 50px; border-radius: 50px;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :strokeWidth > :strokeWidth is String, equal to "50px" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="height: 50px; border-radius: 50px;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme circle progress has t-progress__circle-outer and t-progress__circle-inner class 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--circle t-progress--status--undefined"
    style="width: 112px; height: 112px; font-size: 20px;"
  >
    <div
      class="t-progress__info"
    >
      10%
    </div>
    <svg
      height="112"
      viewBox="0 0 112 112"
      width="112"
    >
      <circle
        class="t-progress__circle-outer"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke=""
        stroke-width="6"
      />
      <circle
        class="t-progress__circle-inner"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke-dasharray="33.30088212805181  299.7079391524663"
        stroke-linecap="round"
        stroke-width="6"
        transform="matrix(0,-1,1,0,0,112)"
      />
    </svg>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme line and plump progress have t-progress__inner class 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme line and plump progress have t-progress__inner class 2`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress__bar t-progress--plump t-progress--under-ten"
  >
    <div
      class="t-progress__inner"
      style="width: 0%;"
    />
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme line and plump progress have t-progress__inner class 3`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress__bar t-progress--plump t-progress--under-ten"
  >
    <div
      class="t-progress__inner"
      style="width: 10%;"
    />
    <div
      class="t-progress__info"
    >
      10%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme line and plump progress have t-progress__inner class 4`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress__bar t-progress--plump t-progress--over-ten"
  >
    <div
      class="t-progress__inner"
      style="width: 11%;"
    >
      <div
        class="t-progress__info"
      >
        11%
      </div>
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme:circle 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--circle t-progress--status--undefined"
    style="width: 112px; height: 112px; font-size: 20px;"
  >
    <div
      class="t-progress__info"
    >
      0%
    </div>
    <svg
      height="112"
      viewBox="0 0 112 112"
      width="112"
    >
      <circle
        class="t-progress__circle-outer"
        cx="56"
        cy="56"
        fill="none"
        r="53"
        stroke=""
        stroke-width="6"
      />
    </svg>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme:line 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :theme > :theme:plump 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress__bar t-progress--plump t-progress--under-ten"
  >
    <div
      class="t-progress__inner"
      style="width: 0%;"
    />
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > :props > :trackColor > :trackColor is "#aaa" 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="background-color: rgb(170, 170, 170); border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;

exports[`Progress > pure progress contains one class 1`] = `
<div
  class="t-progress"
>
  <div
    class="t-progress--thin t-progress--status--undefined"
  >
    <div
      class="t-progress__bar"
      style="border-radius: undefinedpx;"
    >
      <div
        class="t-progress__inner"
        style="width: 0%;"
      />
    </div>
    <div
      class="t-progress__info"
    >
      0%
    </div>
  </div>
</div>
`;
